[package]
name = "cachyos-website-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
diesel = { version = "2", features = ["sqlite", "r2d2", "chrono"] }
dotenv = "0.15"
uuid = { version = "1", features = ["v4", "serde"] }
log = "0.4.17"
env_logger = "0.10.0"
chrono = { version = "0.4.23", default-features = false, features = ["std", "serde"] }
actix-cors = "0.6.4"
