[package]
name = "cachyos-website-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = {  version = "4", features = ["macros"], default-features = false }
serde = { version = "1", features = ["serde_derive"], default-features = false }
serde_json = { version = "1", default-features = false }
diesel = { version = "2", features = ["chrono", "r2d2", "sqlite"], default-features = false }
dotenv = "0.15"
uuid = { version = "1", features = ["v4"], default-features = false }
log = "0.4.17"
env_logger = { version = "0.10.0", default-features = false }
chrono = { version = "0.4.24", features = ["serde"], default-features = false }
actix-cors = "0.6.4"

[[bin]]
name = "write_update_msg"
doc = false

[lib]
doc = false
